Новые стиили/файл со всеми цветами для проекта/Небольшие изменения в состоянии компонентов

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <label for="form-email" class="label">Email</label>
                     </div>
                     <div class="Form__button">
-                        <button type="button" id="form-submit" class="button Form__button-button">
+                        <button type="button" id="form-submit" class="submit-button teal lighten-1">
                             Submit
                         </button>
                     </div>
@@ -58,9 +58,24 @@
                     <div class="slider-items">
                         <div class="slider-item">
                             <div class="Slider__item">
-                                <div class="Slider__item-img" style="background-color: #b2dfdb"></div>
-                                <div class="Slider__item-footer">
-                                    <button type="button" class="Slider__item-button" style="background-color: #b2dfdb">
+                                <div class="Slider__item-header teal lighten-4">
+                                    <div class="slider-title">
+                                        <span></span>
+                                    </div>
+                                    <div class="slider-text">
+                                        <span>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis quam sequi voluptatem 
+                                            dolorem non quis moditempora, iure obcaecati totam esse iste at asperiores laboriosam 
+                                            voluptatum molestiae consequatur sed sunt?
+                                            Doloremque repudiandae, officia eos deleniti ipsam explicabo eaque laudantium ipsum veniam 
+                                            suscipit illum, repellat totam quos, nostrum repellendus autem veritatis perferendis 
+                                            sint quasi nemo quod? Voluptatem reprehenderit 
+                                            ullam ipsam sed.
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="Slider__item-footer grey lighten-5">
+                                    <button type="button" class="submit-button teal lighten-4">
                                         Button
                                     </button>
                                 </div>
@@ -68,9 +83,24 @@
                         </div>
                         <div class="slider-item">
                             <div class="Slider__item">
-                                <div class="Slider__item-img" style="background-color: #ffe0b2"></div>
-                                <div class="Slider__item-footer">
-                                    <button type="button" class="Slider__item-button" style="background-color: #ffe0b2">
+                                <div class="Slider__item-header orange lighten-4">
+                                    <div class="slider-title">
+                                        <span>Slider title</span>
+                                    </div>
+                                    <div class="slider-text">
+                                        <span>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis quam sequi voluptatem 
+                                            dolorem non quis moditempora, iure obcaecati totam esse iste at asperiores laboriosam 
+                                            voluptatum molestiae consequatur sed sunt?
+                                            Doloremque repudiandae, officia eos deleniti ipsam explicabo eaque laudantium ipsum veniam 
+                                            suscipit illum, repellat totam quos, nostrum repellendus autem veritatis perferendis 
+                                            sint quasi nemo quod? Voluptatem reprehenderit 
+                                            ullam ipsam sed.
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="Slider__item-footer grey lighten-5">
+                                    <button type="button" class="submit-button orange lighten-4">
                                         Button
                                     </button>
                                 </div>
@@ -78,9 +108,24 @@
                         </div>
                         <div class="slider-item">
                             <div class="Slider__item">
-                                <div class="Slider__item-img" style="background-color: #ffccbc"></div>
-                                <div class="Slider__item-footer">
-                                    <button type="button" class="Slider__item-button" style="background-color: #ffccbc">
+                                <div class="Slider__item-header deep-orange lighten-4">
+                                    <div class="slider-title">
+                                        <span>Slider title</span>
+                                    </div>
+                                    <div class="slider-text">
+                                        <span>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis quam sequi voluptatem 
+                                            dolorem non quis moditempora, iure obcaecati totam esse iste at asperiores laboriosam 
+                                            voluptatum molestiae consequatur sed sunt?
+                                            Doloremque repudiandae, officia eos deleniti ipsam explicabo eaque laudantium ipsum veniam 
+                                            suscipit illum, repellat totam quos, nostrum repellendus autem veritatis perferendis 
+                                            sint quasi nemo quod? Voluptatem reprehenderit 
+                                            ullam ipsam sed.
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="Slider__item-footer grey lighten-5">
+                                    <button type="button" class="submit-button deep-orange lighten-4">
                                         Button
                                     </button>
                                 </div>
@@ -88,9 +133,24 @@
                         </div>
                         <div class="slider-item">
                             <div class="Slider__item">
-                                <div class="Slider__item-img" style="background-color: #b2ebf2"></div>
-                                <div class="Slider__item-footer">
-                                    <button type="button" class="Slider__item-button" style="background-color: #b2ebf2">
+                                <div class="Slider__item-header" style="background-color: #b2ebf2">
+                                    <div class="slider-title">
+                                        <span>Slider title</span>
+                                    </div>
+                                    <div class="slider-text">
+                                        <span>
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis quam sequi voluptatem 
+                                            dolorem non quis moditempora, iure obcaecati totam esse iste at asperiores laboriosam 
+                                            voluptatum molestiae consequatur sed sunt?
+                                            Doloremque repudiandae, officia eos deleniti ipsam explicabo eaque laudantium ipsum veniam 
+                                            suscipit illum, repellat totam quos, nostrum repellendus autem veritatis perferendis 
+                                            sint quasi nemo quod? Voluptatem reprehenderit 
+                                            ullam ipsam sed.
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="Slider__item-footer grey lighten-5">
+                                    <button type="button" class="submit-button" style="background-color: #b2ebf2">
                                         Button
                                     </button>
                                 </div>
